Set img max-width using flex to try and fix Safari stacking (https://stackoverflow.com/questions/36636243/flex-items-not-stacking-properly-in-safari)

--- a/scss/thing.scss
+++ b/scss/thing.scss
@@ -171,7 +171,8 @@ header {
 }
 
 #gallery img {
-    max-width: 400px;
+    //max-width: 400px;
+    flex: 0 0 400px;
 }
 
 div.images {
